--- a/package.json
+++ b/package.json
@@ -2,19 +2,39 @@
   "name": "integration-test",
   "version": "1.0.0",
   "description": "Integration Test",
-  "main": "main.js",
+  "main": "/src/main.js",
   "scripts": {
-    "test": "test"
+    "dev": "npm run swagger-autogen && npm run watch",
+    "watch": "nodemon --delay 3000ms --exec babel-node ./src/main.js",
+    "test": "npm run test:int",
+    "test:unit": "jest test/unit",
+    "test:int": "jest test/integration",
+    "swagger-autogen": "node swagger.js"
   },
   "author": "Samuel Eugenio",
   "license": "ISC",
   "dependencies": {
     "@elastic/elasticsearch": "^8.2.1",
-    "express": "^4.18.1"
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "fs": "0.0.1-security",
+    "swagger-autogen": "^2.21.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.18.6",
+    "@babel/core": "^7.18.6",
+    "@babel/node": "^7.18.6",
+    "@babel/plugin-transform-runtime": "^7.18.6",
+    "@babel/preset-env": "^7.18.6",
+    "@babel/runtime": "^7.18.6",
     "@elastic/elasticsearch-mock": "^2.0.0",
+    "babel-plugin-inline-json-import": "^0.3.2",
     "jest": "^28.1.2",
+    "nodemon": "^2.0.19",
     "supertest": "^6.2.4"
+  },
+  "engines": {
+    "node": "16.x.x"
   }
 }
